<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterNewUserActivity">

    <LinearLayout
        android:id="@+id/vertLayout"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/sdpvocabLogoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sdpvocabLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/sdpvocab_title_image"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/loginRegisterBannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/registerNewUserBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border"
                android:contentDescription=""
                android:gravity="center"
                android:text="@string/register_a_new_user_banner"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="Register a new user" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:gravity="center|start"
                android:labelFor="@+id/loginUsername"
                android:text="@string/username"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Username:" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/border_white"
                android:contentDescription=""
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="8"
                android:selectAllOnFocus="true"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/majorLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/majorSubjectLabel"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:labelFor="@+id/majorSubject"
                android:text="@string/major_subject"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Major:" />

            <EditText
                android:id="@+id/majorSubject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_white"
                android:contentDescription=""
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="25"
                android:selectAllOnFocus="true"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="14sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/seniorityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seniorityLabel"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:gravity="center|start"
                android:labelFor="@+id/senioritySelect"
                android:text="@string/seniority"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Seniority Level:" />

            <RadioGroup
                android:id="@+id/seniorityLevelRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/freshmanRadioButton">

                <RadioButton
                    android:id="@+id/freshmanRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:text="@string/freshman_radio_btn"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/sophomoreRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:text="@string/sophomore_radio_btn"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/juniorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:text="@string/junior_radio_btn"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/seniorRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:text="@string/senior_radio_btn"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/gradRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/black"
                    android:text="@string/grad_radio_btn"
                    android:textColorLink="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:contentDescription=""
                android:gravity="center|start"
                android:labelFor="@+id/emailAddress"
                android:text="@string/email_label"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Email:" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@drawable/border_white"
                android:contentDescription=""
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:selectAllOnFocus="true"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="14sp"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/registerNewUserButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="321dp"
            tools:layout_editor_absoluteY="155dp">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:contentDescription=""
                android:text="@string/register_btn"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>