<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoveQuizActivity">

    <LinearLayout
        android:id="@+id/vertLayout"
        android:layout_width="0dp"
        android:layout_height="585dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/sdpvocabLogoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sdpvocabLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/sdpvocab_title_image"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/removeQuizBannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/removeQuizBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/border"
                android:contentDescription=""
                android:gravity="center"
                android:text="@string/remove_quiz_banner"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="Remove Quiz" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/selectQuizToRemoveLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/selectQuizToRemoveLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:labelFor="@+id/removeQuizMultiSelect"
                android:text="@string/select_the_quiz_you_wish_to_remove"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/removeQuizMultiSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:backgroundTint="@android:color/black"
                android:textColor="#000000" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/messageAllStatsRemovedWithQuiz"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:contentDescription=""
                android:text="@string/confirm_btn"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/allQuizStatsRemovedLabel"
                android:layout_width="200dp"
                android:layout_height="74dp"
                android:gravity="center_horizontal"
                android:text="@string/quiz_removal_stats_message"
                android:textColor="#000000"
                android:textColorLink="@android:color/black"
                android:textSize="12sp"
                android:textStyle="italic" />


        </LinearLayout>

    </LinearLayout></android.support.constraint.ConstraintLayout>